Mostly working upstart job for gunicorn

--- a/www/aivs/templates/index.html
+++ b/www/aivs/templates/index.html
@@ -5,5 +5,5 @@
 
 <body>
 <h1>AIVScan</h1>
-<img src="{{ STATIC_URL }}aivscan_logo.jpg"/>
+<img src="{{ STATIC_URL }}img/aivscan_logo.jpg"/>
 </body> </html>
