Sketched out registration process.

--- a/www/registration_backend/templates/registration_form.html
+++ b/www/registration_backend/templates/registration_form.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 
-{% block head %}{% endblock %}
+{% block head %}
+<style>
+.help-block {
+   color: #C0C0C0;
+}
+</style>{% endblock %}
 
 {% block container %}
 <form id="register-form" action="/register">
