--- a/www/registration_backend/templates/registration_form.html
+++ b/www/registration_backend/templates/registration_form.html
@@ -49,7 +49,7 @@
 </div>
 <div  class="form-actions">
   <button type="submit" class="btn btn-primary">Submit</button>
-  <button class="btn"><a href="/home">Cancel</a></button>
+  <button class="btn"><a href="{% url home %}">Cancel</a></button>
 </div>
 </form>
   <p class="help-block">NOTE: You will have the option to change profile settings later.</p>
