working on login bug.

--- a/www/registration_backend/templates/login.html
+++ b/www/registration_backend/templates/login.html
@@ -10,6 +10,7 @@
 {% block container %}
 <form method="post" id="auth-form" action="{% url django.contrib.auth.views.login }">
     {% csrf_token %}
+    {{ form.non_field_errors }}
     {{ form }}
     <input type="submit" value="login" />
     <input type="hidden" name="next" value="{{ next }}">
