--- a/www/aivs/templates/nav_include.html
+++ b/www/aivs/templates/nav_include.html
@@ -1,25 +1,37 @@
-<div class="navbar navbar-fixed-top">
-<div class="navbar-inner">
-<div class="container">
-  <a class="brand" href="{% url home %}">AIVScan</a>
+   <!-- Begin the navbar
+    ===================================== -->
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
 
-  <ul class="nav secondary-nav" style="float: right;">
-    <li id="nav-about"><a href="{% url about %}">About</a></li>
-    <li id="nav-contact"> <a href="{% url contact %}">Contact</a></li>
-    {% if user.is_authenticated %}
-    <li class="dropdown" id="logout-menu">
-         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              {{ user.username }}<b class="caret"></b>
-         </a>
-         <ul class="dropdown-menu">
-         <li><a href="{% url auth_logout %}">Logout</a></li>
-         </ul>
-    </li>
-    {% else %}
-    <li><a href="{% url auth_login %}">Sign In</a></li>
-    {% endif %}
-  </ul><!--nav-->
-
-</div><!--container-->
-</div><!-- navbar-inner -->
-</div><!-- navbar -->
+          <a class="brand" href="{% url home %}">AIVScan</a>
+          <div class="btn-group pull-right"><!-- user dropdown menu -->
+            {% if user.is_authenticated %}
+            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+            <i class="icon-user"></i>
+            {{ user.username }}
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a href="{% url profile %}">Profile</a></li>
+              <li class="divider"></li>
+              <li><a href="{% url auth_logout %}">Sign Out</a></li>
+            </ul>
+          {% else %}
+            <a class="btn dropdown-toggle" data-toggle="dropdown"
+          href="{% url auth_login %}">
+            <i class="icon-user"></i>
+            Sign In
+              <span class="caret"></span>
+            </a>
+            {% endif %}
+          </div>
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li><a href="{% url about %}">About</a></li>
+              <li><a href="{% url contact %}">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div><!-- End navbar -->
