Made login modal to match scan.

--- a/www/aivs/templates/scan.html
+++ b/www/aivs/templates/scan.html
@@ -27,6 +27,7 @@
   <button class="btn"><a href="{% url home %}">Cancel</a></button>
   <button type="submit" class="btn btn-primary">Scan</button>
 </div>
+</form>
 </div> <!-- modal body -->
 </div><!-- Modal -->
 
