--- a/www/registration_backend/templates/login.html
+++ b/www/registration_backend/templates/login.html
@@ -8,9 +8,11 @@
 </style>{% endblock %}
 
 {% block container %}
-<h1>Login</h1>
-<hr>
-
+<div class="modal" style="position: relative; top: auto; left: auto; margin: 0 auto; z-index: 1; max-width: 100%;">
+<div class="modal-header">
+  <h2>Login</h2>
+</div>
+<div class="modal-body">
 <form id="auth-form" method="post" action="{% url auth_login %}" class="form-horizontal">
 {% csrf_token %}
 {{ form.errors }}
@@ -30,9 +32,31 @@
   <input type="hidden" name="next" value="/home/">
 </div>
 </form>
+</div> <!-- modal body -->
+</div><!-- Modal -->
+
 {% endblock %}
 {% block scripts %}
 <script>
 $("label.regfields").addClass("control-label");
+
+function clearField(form) {
+   $(form).find("input.input-large, textarea").each(function() {
+       this.defaultValue = this.value;
+       $(this).click(function() {
+          if(this.value == this.defaultValue) {
+              $(this).val("");
+          }
+          return false;
+       });
+       $(this).blur(function() {
+           if(this.value == ""){
+              $(this).val(this.defaultValue);
+           }
+       });
+    });
+}
+
+$(document).ready(function() { clearField("#auth-form")})
 </script>
 {% endblock %}
