Incorporated textual changes from drafts and login workflow fix.

--- a/www/aivs/templates/about.html
+++ b/www/aivs/templates/about.html
@@ -2,7 +2,7 @@
 
 {% block head %}{% endblock %}
 {% block container %}
-<h1>What is AIVScan?</h1>
+<h1>Why AIVScan?</h1>
 
 <p>Today, some of our most valuable assets are in the form of electronic information. As such, we must take measures to protect our data and ensure that it doesn’t fall into the wrong hands. External threats, whether hackers or viruses, are a concern that is difficult to evaluate and assess. AIVScan is designed to give individuals and organizations the ability to quickly and efficiently assess their external footprint.</p>
 
