--- a/www/aivs/templates/nav_include.html
+++ b/www/aivs/templates/nav_include.html
@@ -21,7 +21,7 @@
             <a class="btn dropdown-toggle" data-toggle="dropdown"
           href="{% url auth_login %}">
             <i class="icon-user"></i>
-            Sign In
+            Login
               <span class="caret"></span>
             </a>
             {% endif %}
