--- a/www/aivs/templates/home.html
+++ b/www/aivs/templates/home.html
@@ -22,7 +22,7 @@
     <div class="hero-unit" style="width:980px;">
        <p><img src="{{ STATIC_URL }}img/aivscan_logo.png" height="150px" width="175px" class="mainlogo"/></p>
       <h1>Welcome to AIVScan!</h1>
-      <p>AIVScan is a super awesome tool for blah blah blah some stuff about security! Click the pretty blue button to get started! </p>
+      <p>AIVScan is a web-based security evaluation application. Click the pretty blue button to get started! </p>
       <p>
       {% if user.is_authenticated %}
       <a class="btn btn-primary btn-large" href="{% url scan %}">Get Started &raquo;</a>
@@ -37,18 +37,10 @@
 
      <div class="span8">
       <h2>Stuff about AIVScan</h2>
+<p>AIVScan is a web-based security evaluation application. Its primary goal is to efficiently and accurately assess the security of a computer. AIVScan is designed for all types of users, home or business, regardless of technical sophistication. Our service is an automatic security scan that determines Internet-accessible services, their vendor and version, and any known vulnerabilities that can endanger the user’s computer and stored information. The product will automatically obtain much of the information necessary to conduct the security scan, including IP address, operating system, and others.</p>
+ <p>The primary goal of AIVScan is to improve the overall security profile of our users’ computers. If our clients follow through with our suggestions for improvement, they will improve their computer’s security and help protect their sensitive information.</p>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-      <p>Click <a href="{% url registration_register %}">here</a> to get started. </p>
+       <p>Click <a href="{% url registration_register %}">here</a> to learn more</p>
         </div><!-- span 8 -->
       </div><!-- row -->
 </div> <!-- /container -->
