--- a/www/aivs/templates/scan.html
+++ b/www/aivs/templates/scan.html
@@ -32,7 +32,10 @@
 </div><!-- Modal -->
 
 <!-- terms and conditions modal -->
-<div class="modal hide" id="terms-modal">
+<div class="modal fade hide" id="terms-modal">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal">×</button>
+    <h3>Terms and Conditions</h3>
   <div class="modal-body">
 {% include "terms_and_conditions.html" %}
     </div>
