--- a/www/aivs/templates/head_include.html
+++ b/www/aivs/templates/head_include.html
@@ -1,14 +1,16 @@
-  <meta charset="utf-8">
-  <title>Pwn Stars | AIVScan</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
+<meta charset="utf-8">
+<title>Pwn Stars | AIVScan</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="">
+<meta name="author" content="">
 
-  <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
-  <style>
+<link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
+<style>
   body { padding-top: 60px; }
   footer { text-align: center; margin-top: 3em;}
-  </style>
+  .help-block { color: #C0C0C0; }
+</style>
+
   <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
