--- a/www/aivs/templates/profile.html
+++ b/www/aivs/templates/profile.html
@@ -19,7 +19,7 @@
               <li class="nav-header">Account Info</li>
               <li><a href="#">{{ user.email }}</a></li>
               <li><a href="#">Change Password</a></li>
-              <li><a href="#">Member since "insert script here"</a></li>
+              <li><a href="#">Member since {{ user.date_joined|date:"Y M d" }}</a></li>
             </ul>
           </div><!--/.well -->
      </div><!-- span3 -->
@@ -41,7 +41,7 @@
          <tr><td><a>2012 May 12</a></td><td>First eight words of the summary of results...</td></tr>
          <!-- end demo -->
      {% for scan in scans %}
-       <tr><td><a>{{ scan.completion_dt|date:"Y M D" }}</a></td><td>{{ scan.results|truncatewords:8}}</td></tr>
+       <tr><td><a>{{ scan.completion_dt|date:"Y M d" }}</a></td><td>{{ scan.results|truncatewords:8}}</td></tr>
      {% endfor %}
      </tbody>
      </table>
