New modals for password reset/change.

--- a/www/registration_backend/templates/login.html
+++ b/www/registration_backend/templates/login.html
@@ -32,7 +32,7 @@
   <input type="hidden" name="next" value="{% url profile %}">
 </div>
 </form>
-<a href="{% url auth_password_reset %}">Forgot password?</a>
+<a href="{% url password_reset %}">Forgot password?</a>
 </div> <!-- modal body -->
 </div><!-- Modal -->
 
