--- a/www/aivs/templates/head_include.html
+++ b/www/aivs/templates/head_include.html
@@ -9,6 +9,7 @@
   body { padding-top: 60px; }
   footer { text-align: center; margin-top: 3em;}
   .help-block { color: #C0C0C0; }
+  noscript { font-size:2em;text-style:bold; color: red;}
 </style>
 
   <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
