--- a/www/aivs/templates/contact_modal.html
+++ b/www/aivs/templates/contact_modal.html
@@ -1,3 +1,5 @@
+{% extends "base_modal.html" %}
+{% block modalform %}
 <form id="modal-form" method="post" action="{% url contact %}" class="well form-vertical">
 
 <div class="modal-header">
@@ -31,5 +33,4 @@
 </div> <!-- end modal body -->
 
 </form>
-
-
+{% endblock %}
