--- a/www/registration_backend/templates/forgot_password_modal.html
+++ b/www/registration_backend/templates/forgot_password_modal.html
@@ -1,3 +1,5 @@
+{% extends "base_modal.html" %}
+{% block modalform %}
 <form id="modal-form" method="post" action="{% url password_reset %}" class="well form-vertical">
 
 <div class="modal-header">
@@ -17,3 +19,4 @@
 </div>
 </form>
 </div> <!-- end modal body -->
+{% endblock %}
