--- a/www/registration_backend/templates/password_change_modal.html
+++ b/www/registration_backend/templates/password_change_modal.html
@@ -1,3 +1,5 @@
+{% extends "base_modal.html" %}
+{% block modalform %}
 <form id="modal-form" method="post" action="{% url password_change %}" class="well form-vertical">
 
 <div class="modal-header">
@@ -17,5 +19,5 @@
 </div>
 </form>
 </div> <!-- end modal body -->
-
+{% endblock %}
 
