--- a/www/aivs/templates/footer_and_scripts.html
+++ b/www/aivs/templates/footer_and_scripts.html
@@ -16,7 +16,7 @@
 <!--    <script src="{{ STATIC_URL }}js/bootstrap-popover.js"></script>-->
 <!--    <script src="{{ STATIC_URL }}js/bootstrap-button.js"></script>-->
 <!--    <script src="{{ STATIC_URL }}js/bootstrap-collapse.js"></script>-->
-<!--    <script src="{{ STATIC_URL }}js/bootstrap-carousel.js"></script>-->
+<script src="{{ STATIC_URL }}js/bootstrap-carousel.js"></script>
 <!--    <script src="{{ STATIC_URL }}js/bootstrap-typeahead.js"></script>-->
 <script>
 var current_page = "#nav-" + location.pathname.slice(1)
