--- a/www/aivs/templates/profile.html
+++ b/www/aivs/templates/profile.html
@@ -26,7 +26,11 @@
      </tbody>
      </table>
 
-       </div><!-- span8 -->
+<div style="text-align:right">
+  <a href="{% url slideshow %}">I want to see the slideshow again!</a>
+</div>
+
+</div><!-- span8 -->
 </div> <!-- /container -->
 
 {% include "footer_and_scripts.html" %}
